If a gap is corrected, the hover over as well as the colour represent the correction rather than the gap * The numbers of all breaks are now displayed next to the break symbol

--- a/js/themes/advanced/skins/wce/content.css
+++ b/js/themes/advanced/skins/wce/content.css
@@ -412,6 +412,29 @@ span.witnessend{
 
 }
 
+span.corr, span.corr_blank_firsthand{
+	
+	border: 1px  dotted #f00;
+	 
+	margin:0px 0px 0px 1px;
+	 
+	padding:0;
+	
+	color: blue;
+
+}
+
+span[class="corr"] span[class="gap"]{
+	
+	border: 1px  dotted #f00;
+	 
+	margin:0px 0px 0px 1px;
+	 
+	padding:0;
+	
+	color:blue
+
+}
 
 
 span.gap{
@@ -423,21 +446,6 @@ span.gap{
 	padding:0;
 	
 	color:red
-
-}
-
-
-
-span.corr, span.corr_blank_firsthand{
-	
-	border: 1px  dotted #f00;
-	 
-	margin:0px 0px 0px 1px;
-	 
-	padding:0;
-	
-	color: blue;
-	
 
 }
 
